--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,11 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "anyio>=4.10.0",
+    "asyncer>=0.0.8",
+    "boto3>=1.40.25",
     "browser-use>=0.7.2",
     "kernel>=0.11.0",
+    "orjson>=3.11.3",
     "pydantic>=2.10.6",
     "sorcery>=0.2.2",
     "zenbase-llml>=0.4.0",
